# cuFun

./: CMakeLists.txt  INPUT.md  README.md  README22.md
TEST/: CMakeLists.txt  test_cuMat.cpp
cuFun/: CMakeLists.txt
cuFun/header/: .matrix.cuh.un~  cuFun.cuh  dnnFun.cuh  matrix.cuh  matrix.cuh~  vector.cuh
cuFun/source/: dnnFun.cu  matrix.cu  vector.cu
